# pyroml

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  iris.ipynb  publish.sh  pyproject.toml  requirements.txt  setup.py  temp.ipynb
notebooks/: README.md  distill-resnet18-flowers102.ipynb  falcon.ipynb  iris.ipynb  patchcore.ipynb  smolvlm-flowers102.ipynb
notebooks/iris-data/: cache-373438ad3b4bd237.arrow  cache-8b022b82a7a3fb62.arrow  cache-baa5de2b697c6b53.arrow  cache-c277e3b672be06cf.arrow  data-00000-of-00001.arrow  dataset_info.json
pyroml/: __init__.py  autocast.py  batch_iterator.py  callback.py  checkpoint.py  config.py  dispenser.py  hparams.py  log.py  logger.py  metrics.py  metrics_tracker.py  model.py  progress.py  progress_bar.py  state.py  stats.py  status.py  tracker.py  trainer.py  utils.py  wandb.py  wandb_logger.py
pyroml/callbacks/: callback.py  checkpoint.py
pyroml/callbacks/loggers/: base_logger.py  wandb_logger.py
pyroml/callbacks/progress/: base_progress.py  rich_progress.py  tqdm_progress.py
pyroml/core/: __init__.py  autocast.py  hparams.py  model.py  prediction.py  status.py  tracker.py  trainer.py
pyroml/loggers/: wandb_logger.py
pyroml/loop/: __init__.py  autocast.py  base.py  eval.py  predict.py  progress_bar.py  status.py  test.py  train.py
pyroml/metrics/: loss.py  tracker.py
pyroml/models/: backbone.py  utils.py
pyroml/models/falcon/: README.md  __init__.py  config.py  graph.py  heads.py  loss.py  metrics.py  model.py  neighbors.py
pyroml/template/: iris.py
pyroml/template/base/: __init__.py  dataset.py  load.py
pyroml/template/cifar100/: dataset.py
pyroml/template/flowers102/: dataset.py
pyroml/template/iris/: dataset.py  model.py
pyroml/template/mvtec/: dataset.py
pyroml/utils/: date.py  env.py
scripts/: check.sh  tests.sh
src/: config.py  stats.py  trainer.py  utils.py  wandb.py
tests/: __init__.py  checkpoints.py  conftest.py  dummy.py  iris.py  iris_epoch=0.csv  iris_epoch=1.csv  iris_epoch=10.csv  iris_epoch=11.csv  iris_epoch=12.csv  iris_epoch=13.csv  iris_epoch=14.csv  iris_epoch=15.csv  iris_epoch=2.csv  iris_epoch=3.csv  iris_epoch=4.csv  iris_epoch=5.csv  iris_epoch=6.csv  iris_epoch=7.csv  iris_epoch=8.csv  iris_epoch=9.csv  main.py  model.py  pretrain.py  progress.py  progress_bar.py  save-load.py  setup.py  test_iris.py  tracker.py  trainer.py  trainer_test.py  wandb.py  wandb_test.py
tests/dummy/: classification.py  regression.py
tests/iris-data/: cache-08e1573403577530.arrow  cache-8b022b82a7a3fb62.arrow  cache-abb6503b157c35bd.arrow  cache-baa5de2b697c6b53.arrow  cache-e293b947e4ff0fc1.arrow  data-00000-of-00001.arrow  state.json
