[project]
name = "pyroml"
version = "0.0.14"
description = "Machine Learning framework allowing plug-and-play training for pytorch models"
authors = [{ name = "Nathan" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets (>=3.2.0,<4.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torchmetrics (>=1.6.1,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "safetensors (>=0.5.2,<0.6.0)",
    "wandb (>=0.19.2,<0.20.0)",
]
license = { file = "LICENSE" }
urls = { github = "https://github.com/peacefulotter/pyroml" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]
torch = { source = "pytorch_cpu" }
torchvision = { source = "pytorch_cpu" }

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.5"

