[project]
name = "pyroml"
version = "2.1.0"
description = "Machine Learning framework allowing plug-and-play training for pytorch models"
authors = [{ name = "Nathan MAIRE" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
urls = { github = "https://github.com/peacefulotter/pyroml" }

dependencies = [
    "torch (>=2.6.0)",
    "torchvision (>=0.20.1)",
    "torchmetrics (>=1.6.1,<2.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "safetensors (>=0.5.2,<0.6.0)",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = ">=2.6.0", source = "pytorch-cu124" }
torchvision = { version = ">=0.20.1", source = "pytorch-cu124" }

[tool.poetry.extras]
cuda = ["torch", "torchvision"]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.extra.dependencies]
wandb = "^0.19.6"
torch-ema = "^0.3"
timm = "^1.0.14"
einops = "^0.8.0"
gurobipy = "^12.0.1"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"
